fix vertical align input

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -27,7 +27,6 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   width: 100%;
-  min-height: 50%;
   max-height: 50%;
   border-top: 2px solid blueviolet;
   padding-top: 10px;
